k8s/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: demo-devops
  labels:
    app: demo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app
          image: devsu-demo-app:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /api/
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /api/
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
