k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: demo-devops
spec:
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
